hphp/hack/test/typecheck/expression_trees/dynamic_property_access.php.exp
File "dynamic_property_access.php", line 12, characters 5-10:
Expression trees only support named property access. (Parsing[1002])
